--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
